# stt-inference-evaluation-pipeline

./: .gitignore  ABSTRACTS.md  CURRENT_STATUS.md  EXPERIMENTS.md  README.md  main.py  plan_internal.md  pyproject.toml  quick_notes.md  requirements-lock.txt  run_local.sh  run_pipeline.sh  run_vm.sh
.claude/: project_rules.md
configs/: inference.yaml
notebooks/: 1_get_resources.ipynb  2_filter_records.ipynb  3_add_audio_features.ipynb  4_create_splits.ipynb  5_aggregate_results.ipynb  audio_analysis.ipynb  audio_analysis.ipynb.bak  audio_analysis_fast_gpu.ipynb  audio_preprocessing_pipeline.ipynb  audio_quality_algos.ipynb  canary_qwen_resource_test.ipynb  canary_resource_test.ipynb  commercial_stt_models.ipynb  data_prep_loc_jukebox_example.ipynb  data_prep_loc_veteran.ipynb  evals_learn.ipynb  finetune_parakeet_nemo.ipynb  finetune_whisper_lora.ipynb  finetune_whisper_lora_a6000_tested.ipynb  loc.ipynb  nb_main.ipynb  preprocessing_experiments.ipynb  tutorial_audio_analysis.ipynb  tutorial_audio_quality_algorithms.ipynb  tutorial_azure_blob_test.ipynb  tutorial_evaluation.ipynb  tutorial_infer_canary.ipynb  tutorial_infer_canary_1b.ipynb  tutorial_infer_canary_qwen.ipynb  tutorial_infer_parakeet.ipynb  tutorial_infer_parakeet.ipynb.backup  tutorial_infer_wav2vec2.ipynb  tutorial_infer_whisper.ipynb  vhp_data_slicing.ipynb
scripts/: audio_analysis.py  azure_utils.py  ctc_segmentation_utils.py  data_loader.py  evaluate.py  file_logger.py  finetune_whisper_lora.py  infer_aws_transcribe.py  infer_aws_transcribe.py.bak  infer_canary.py  infer_canary_1b.py  infer_canary_qwen.py  infer_gcp_chirp.py  infer_parakeet.py  infer_wav2vec2.py  infer_whisper.py  infer_whisper_hf.py  loc_vhp_2_az_blob.py  run_inference.py  (+8 more)
(+92 files in other folders)
